# htmx-example

./: .env  Cargo.toml
migrations/: 20240204135610_init.sql  20240204154101_change_column_type.sql
src/: handlers.rs  main.rs  models.rs
templates/: todo-list.html
web/: create-todo.html  index.html
