[package]
name = "htmx-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
chrono = { version = "0.4.33", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.1"
serde = { version = "1.0.196" }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "chrono"] }
tera = "1.19.1"
